--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -14,16 +14,357 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import mlflow\n",
+    "import mlflow.sklearn\n",
+    "import pandas as pd\n",
+    "import kagglehub\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from mlflow.models.signature import infer_signature\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Diameter</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Whole weight</th>\n",
+       "      <th>Shucked weight</th>\n",
+       "      <th>Viscera weight</th>\n",
+       "      <th>Shell weight</th>\n",
+       "      <th>Rings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.5140</td>\n",
+       "      <td>0.2245</td>\n",
+       "      <td>0.1010</td>\n",
+       "      <td>0.150</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>0.265</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>0.2255</td>\n",
+       "      <td>0.0995</td>\n",
+       "      <td>0.0485</td>\n",
+       "      <td>0.070</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F</td>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.6770</td>\n",
+       "      <td>0.2565</td>\n",
+       "      <td>0.1415</td>\n",
+       "      <td>0.210</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.440</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.5160</td>\n",
+       "      <td>0.2155</td>\n",
+       "      <td>0.1140</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.255</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.2050</td>\n",
+       "      <td>0.0895</td>\n",
+       "      <td>0.0395</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sex  Length  Diameter  Height  Whole weight  Shucked weight  Viscera weight  \\\n",
+       "0   M   0.455     0.365   0.095        0.5140          0.2245          0.1010   \n",
+       "1   M   0.350     0.265   0.090        0.2255          0.0995          0.0485   \n",
+       "2   F   0.530     0.420   0.135        0.6770          0.2565          0.1415   \n",
+       "3   M   0.440     0.365   0.125        0.5160          0.2155          0.1140   \n",
+       "4   I   0.330     0.255   0.080        0.2050          0.0895          0.0395   \n",
+       "\n",
+       "   Shell weight  Rings  \n",
+       "0         0.150     15  \n",
+       "1         0.070      7  \n",
+       "2         0.210      9  \n",
+       "3         0.155     10  \n",
+       "4         0.055      7  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Download the dataset\n",
+    "path = kagglehub.dataset_download(\"rodolfomendes/abalone-dataset\")\n",
+    "csv_path = os.path.join(path, \"abalone.csv\") \n",
+    "\n",
+    "df = pd.read_csv(csv_path)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One-hot encoding the categorical variables\n",
+    "df = pd.get_dummies(df, columns=['Sex'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the target variable\n",
+    "X = df.drop(columns=['Rings'])  \n",
+    "y = df['Rings']                 \n",
+    "\n",
+    "# Train-test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizing the features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7714cca3cac04fa3a1368258fc62b9e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 4.891232447128579\n",
+      "R^2 Score: 0.5481628137889263\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining the linear regression model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Track the experiment using MLflow\n",
+    "with mlflow.start_run(run_name=\"Linear Regression Experiment\"):\n",
+    "\n",
+    "    # Fit the model\n",
+    "    model.fit(X_train_scaled, y_train)\n",
+    "    \n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
+    "    \n",
+    "    # Evaluate the model\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "    \n",
+    "    # Log parameters and metrics to MLflow\n",
+    "    mlflow.log_param(\"model\", \"Linear Regression\")\n",
+    "    mlflow.log_param(\"scaling\", \"StandardScaler\")\n",
+    "    mlflow.log_metric(\"mse\", mse)\n",
+    "    mlflow.log_metric(\"r2_score\", r2)\n",
+    "\n",
+    "     # Create an input example\n",
+    "    input_example = pd.DataFrame(X_test_scaled[:5], columns=X.columns)  # Using the first 5 rows as an example\n",
+    "\n",
+    "    # Infer model signature (schema)\n",
+    "    signature = infer_signature(X_test_scaled, y_pred)\n",
+    "\n",
+    "    # Log the model with input example and signature\n",
+    "    mlflow.sklearn.log_model(model, \"linear_regression_model\", signature=signature, input_example=input_example)\n",
+    "\n",
+    "    print(f\"Mean Squared Error: {mse}\")\n",
+    "    print(f\"R^2 Score: {r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54e98222d821463084a62447c79448b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 5.437235685045327\n",
+      "R^2 Score: 0.49772469428649535\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = XGBRegressor(random_state=42)\n",
+    "\n",
+    "with mlflow.start_run(run_name=\"XGBoost Regressor Experiment\"):\n",
+    "\n",
+    "    # Fit the model\n",
+    "    model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "    # Evaluate the model\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    # Log parameters and metrics to MLflow\n",
+    "    mlflow.log_param(\"model\", \"XGBoost Regressor\")\n",
+    "    mlflow.log_param(\"scaling\", \"StandardScaler\")\n",
+    "    mlflow.log_metric(\"mse\", mse)\n",
+    "    mlflow.log_metric(\"r2_score\", r2)\n",
+    "\n",
+    "    # Create an input example\n",
+    "    input_example = pd.DataFrame(X_test_scaled[:5], columns=X.columns)\n",
+    "\n",
+    "    # Infer model signature (schema)\n",
+    "    signature = infer_signature(X_test_scaled, y_pred)\n",
+    "\n",
+    "    # Log the model with input example and signature\n",
+    "    mlflow.sklearn.log_model(model, \"xgboost_regressor_model\", signature=signature, input_example=input_example)\n",
+    "\n",
+    "    print(f\"Mean Squared Error: {mse}\")\n",
+    "    print(f\"R^2 Score: {r2}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
