final_commit_branch01

--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,37 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/rodolfomendes/abalone-dataset?dataset_version_number=3...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████| 57.3k/57.3k [00:00<00:00, 24.1MB/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -211,7 +183,7 @@
        "4         0.055      7  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aa1bea9e94840009667d2dac3d9080e",
+       "model_id": "9e878682e107464da92dcccd93ac212e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -291,8 +263,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 4.891232447128581\n",
-      "R^2 Score: 0.5481628137889261\n"
+      "Mean Squared Error: 4.891232447128579\n",
+      "R^2 Score: 0.5481628137889263\n"
      ]
     }
    ],
@@ -334,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20c58193800a4cd79053c0d2b41487ac",
+       "model_id": "65c90893a4794e4897386b0bf76ef7b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,15 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000369 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001161 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1298\n",
       "[LightGBM] [Info] Number of data points in the train set: 3341, number of used features: 9\n",
       "[LightGBM] [Info] Start training from score 9.944627\n"
@@ -413,7 +386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a1baadb48fd45ad808b6211613a1a12",
+       "model_id": "1d51f749f9aa45b5a27571876cdb44bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -470,13 +443,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4c34073e5c14e35bcb0ff6bf89d5c3a",
+       "model_id": "f6ec2f816950468aada666d6b916a512",
        "version_major": 2,
        "version_minor": 0
       },
@@ -533,13 +506,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6998a0af72fb4458baa0770f802a9e22",
+       "model_id": "15adad7ad2ac4b739d2458b8576391c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -596,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b70039899009473581ec35c8730d0806",
+       "model_id": "e576bb2650e74e5f992ae1ebc230a2f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -659,13 +632,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd428798638948898bd53b5d5a650f29",
+       "model_id": "a3bac0f98318420f85c19fb7df7b06ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -680,8 +653,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 4.891051067434373\n",
-      "R^2 Score: 0.5481795690937604\n"
+      "Mean Squared Error: 4.8910510674343675\n",
+      "R^2 Score: 0.5481795690937609\n"
      ]
     }
    ],
@@ -722,13 +695,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dcb874a1665411287f2bb7559bc1168",
+       "model_id": "6638b2e30fad48929fa585fe27f9ed0d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -743,8 +716,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 7.0931497198849875\n",
-      "R^2 Score: 0.34475638901844086\n"
+      "Mean Squared Error: 7.093149719884988\n",
+      "R^2 Score: 0.34475638901844075\n"
      ]
     }
    ],
@@ -785,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -793,16 +766,16 @@
      "output_type": "stream",
      "text": [
       "Best parameters for Extended Ridge: {'alpha': 1.0, 'fit_intercept': True, 'solver': 'lsqr'}\n",
-      "Best MSE for Extended Ridge: 4.889262037394461\n",
-      "Test MSE for Extended Ridge: 4.891051067370753\n",
-      "Test R² for Extended Ridge: 0.5481795690996374\n"
+      "Best MSE for Extended Ridge: 4.889262037659363\n",
+      "Test MSE for Extended Ridge: 4.891051067336059\n",
+      "Test R² for Extended Ridge: 0.5481795691028423\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/model_selection/_validation.py:542: FitFailedWarning: \n",
+      "c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:425: FitFailedWarning: \n",
       "70 fits failed out of a total of 420.\n",
       "The score on these train-test partitions for these parameters will be set to nan.\n",
       "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
@@ -811,36 +784,36 @@
       "--------------------------------------------------------------------------------\n",
       "70 fits failed with the following error:\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/model_selection/_validation.py\", line 890, in _fit_and_score\n",
+      "  File \"c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 732, in _fit_and_score\n",
       "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/base.py\", line 1351, in wrapper\n",
+      "  File \"c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\base.py\", line 1151, in wrapper\n",
       "    return fit_method(estimator, *args, **kwargs)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/linear_model/_ridge.py\", line 1161, in fit\n",
+      "  File \"c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py\", line 1142, in fit\n",
       "    return super().fit(X, y, sample_weight=sample_weight)\n",
       "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/linear_model/_ridge.py\", line 838, in fit\n",
+      "  File \"c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_ridge.py\", line 819, in fit\n",
       "    raise ValueError(\n",
       "ValueError: 'lbfgs' solver can be used only when positive=True. Please use another solver.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/Users/hocine/anaconda3/lib/python3.11/site-packages/sklearn/model_selection/_search.py:1051: UserWarning: One or more of the test scores are non-finite: [  -4.88949928   -4.88949928   -4.88949928   -4.88949928   -4.88957204\n",
-      "           nan -104.30875698 -104.30875698 -104.30875698 -104.30661588\n",
-      " -104.30865695           nan   -4.88949064   -4.88949064   -4.88949064\n",
-      "   -4.88949064   -4.88956563           nan -104.30868434 -104.30868434\n",
-      " -104.30868434 -104.30654559 -104.30857318           nan   -4.88941146\n",
-      "   -4.88941146   -4.88941146   -4.88941146   -4.88948577           nan\n",
-      " -104.30796792 -104.30796792 -104.30796792 -104.30585251 -104.30785012\n",
+      "c:\\Users\\user\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:976: UserWarning: One or more of the test scores are non-finite: [  -4.88949928   -4.88949928   -4.88949928   -4.88949928   -4.88957417\n",
+      "           nan -104.30875698 -104.30875698 -104.30875698 -104.30661738\n",
+      " -104.30864366           nan   -4.88949064   -4.88949064   -4.88949064\n",
+      "   -4.88949064   -4.88956532           nan -104.30868434 -104.30868434\n",
+      " -104.30868434 -104.30654709 -104.30857962           nan   -4.88941146\n",
+      "   -4.88941146   -4.88941146   -4.88941146   -4.8894896            nan\n",
+      " -104.30796792 -104.30796792 -104.30796792 -104.305854   -104.30785796\n",
       "           nan   -4.88926204   -4.88926204   -4.88926204   -4.88926204\n",
-      "   -4.88937651           nan -104.30170644 -104.30170644 -104.30170644\n",
-      " -104.29923574 -104.30166064           nan   -4.91271093   -4.91271093\n",
-      "   -4.91271093   -4.91271093   -4.91290405           nan -104.28153165\n",
-      " -104.28153165 -104.28153165 -104.28613951 -104.28166653           nan\n",
-      "   -5.11209521   -5.11209521   -5.11209521   -5.1121176    -5.11211228\n",
-      "           nan -104.36526545 -104.36526545 -104.36526545 -104.36518912\n",
-      " -104.36526686           nan   -6.03948785   -6.03948785   -6.03948785\n",
-      "   -6.03947051   -6.03950491           nan -105.16444157 -105.16444157\n",
-      " -105.16444157 -105.16423843 -105.16451105           nan]\n",
+      "   -4.88937386           nan -104.30170644 -104.30170644 -104.30170644\n",
+      " -104.29923784 -104.30166331           nan   -4.91271093   -4.91271093\n",
+      "   -4.91271093   -4.91271093   -4.91290437           nan -104.28153165\n",
+      " -104.28153165 -104.28153165 -104.28614131 -104.28164491           nan\n",
+      "   -5.11209521   -5.11209521   -5.11209521   -5.11211939   -5.11217255\n",
+      "           nan -104.36526545 -104.36526545 -104.36526545 -104.36519389\n",
+      " -104.3653421            nan   -6.03948785   -6.03948785   -6.03948785\n",
+      "   -6.03947051   -6.03950797           nan -105.16444157 -105.16444157\n",
+      " -105.16444157 -105.16423843 -105.16452788           nan]\n",
       "  warnings.warn(\n"
      ]
     }
@@ -873,7 +846,7 @@
     "r2_extended_ridge = r2_score(y_test, y_pred_extended_ridge)\n",
     "\n",
     "print(f\"Test MSE for Extended Ridge: {mse_extended_ridge}\")\n",
-    "print(f\"Test R² for Extended Ridge: {r2_extended_ridge}\")\n"
+    "print(f\"Test R² for Extended Ridge: {r2_extended_ridge}\")"
    ]
   }
  ],
