--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -835,7 +835,7 @@
     "# Fit the model\n",
     "ridge_extended_grid_search.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Best parameters and performance\n",
+    "# Best parameters & performance\n",
     "best_extended_ridge_model = ridge_extended_grid_search.best_estimator_\n",
     "print(f\"Best parameters for Extended Ridge: {ridge_extended_grid_search.best_params_}\")\n",
     "print(f\"Best MSE for Extended Ridge: {-ridge_extended_grid_search.best_score_}\")\n",
